--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "explorobot",
   "version": "0.0.1",
-  "description": "",
+  "description": "VeeeeR",
+  "repository": "http://github.com/cmcfadden/explorobot"
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "css-loader": "^0.23.1",
+    "jquery": "^2.2.1",
     "style-loader": "^0.13.0",
     "three": "^0.74.0"
   }
