--- a/package.json
+++ b/package.json
@@ -1,18 +1,30 @@
 {
-  "name": "explorobot",
+  "name": "Explorobot",
   "version": "0.0.1",
-  "description": "VeeeeR",
-  "repository": "http://github.com/cmcfadden/explorobot",
-  "main": "index.js",
+  "description": "Spherical VR tour builder",
+  "main": "lib/explorobot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode=build",
+    "dev": "webpack --progress --colors --watch --mode=dev",
+    "test": "mocha --compilers js:babel-core/register --colors -w ./test/*.spec.js"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "css-loader": "^0.23.1",
-    "jquery": "^2.2.1",
-    "style-loader": "^0.13.0",
-    "three": "^0.74.0"
-  }
+  "devDependencies": {
+    "babel": "6.3.13",
+    "babel-core": "6.1.18",
+    "babel-eslint": "5.0.0",
+    "babel-loader": "6.1.0",
+    "babel-plugin-add-module-exports": "0.1.2",
+    "babel-preset-es2015": "6.3.13",
+    "chai": "3.4.1",
+    "eslint": "1.7.2",
+    "eslint-loader": "1.1.0",
+    "mocha": "2.3.4",
+    "webpack": "1.12.9",
+    "yargs": "3.32.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/cmcfadden/explorobot.git"
+  },
+  "author": "LATIS"
 }
