--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jquery": "^2.2.1",
     "promise-polyfill": "^3.1.0",
     "three": "^0.74.0",
+    "tween": "^0.9.0",
     "webvr-boilerplate": "^0.3.8",
     "webvr-polyfill": "^0.2.7"
   }
